Finished cart js

--- a/cart.html
+++ b/cart.html
@@ -42,65 +42,7 @@
           </svg></a>
         <div class="cart-table">
           <div class="cart__title">Ваша корзина</div>
-          <div class="cart-list">
-            <div class="cart__item">
-              <input class="checkbox-1" type="checkbox" id="checkbox-1">
-              <label for="checkbox-1"></label>
-              <div class="toy__img">
-                <picture>
-                  <source srcset="img/cart-lama@1x.webp, img/cart-lama@2x.webp 2x" type="image/webp">
-                  <source srcset="img/cart-lama@1x.jpg, img/cart-lama@2x.jpg 2x" type="image/png"><img src="img/cart-lama@1x.jpg" srcset="img/cart-lama@2x.jpg" width="140" height="140" alt="Игрушка радужная лама">
-                </picture>
-              </div>
-              <div class="toy__name">Радужная лама</div>
-              <div class="toy-count">
-                <div class="toy-count-arrows">
-                  <div class="count__arrow-left">&#60;</div>
-                  <div class="count__arrow-right">&#62;</div>
-                </div>
-                <div class="count__number">1</div>
-              </div>
-              <div class="toy__price">1000 ₽</div>
-            </div>
-            <div class="cart__item">
-              <input class="checkbox-2" type="checkbox" id="checkbox-2">
-              <label for="checkbox-2"></label>
-              <div class="toy__img">
-                <picture>
-                  <source srcset="img/cart-lama@1x.webp, img/cart-lama@2x.webp 2x" type="image/webp">
-                  <source srcset="img/cart-lama@1x.jpg, img/cart-lama@2x.jpg 2x" type="image/png"><img src="img/cart-lama@1x.jpg" srcset="img/cart-lama@2x.jpg" width="140" height="140" alt="Игрушка радужная лама">
-                </picture>
-              </div>
-              <div class="toy__name">Радужная лама</div>
-              <div class="toy-count">
-                <div class="toy-count-arrows">
-                  <div class="count__arrow-left">&#60;</div>
-                  <div class="count__arrow-right">&#62;</div>
-                </div>
-                <div class="count__number">1</div>
-              </div>
-              <div class="toy__price">1000 ₽</div>
-            </div>
-            <div class="cart__item">
-              <input class="checkbox-3" type="checkbox" id="checkbox-3">
-              <label for="checkbox-3"></label>
-              <div class="toy__img">
-                <picture>
-                  <source srcset="img/cart-lama@1x.webp, img/cart-lama@2x.webp 2x" type="image/webp">
-                  <source srcset="img/cart-lama@1x.jpg, img/cart-lama@2x.jpg 2x" type="image/png"><img src="img/cart-lama@1x.jpg" srcset="img/cart-lama@2x.jpg" width="140" height="140" alt="Игрушка радужная лама">
-                </picture>
-              </div>
-              <div class="toy__name">Радужная лама</div>
-              <div class="toy-count">
-                <div class="toy-count-arrows">
-                  <div class="count__arrow-left">&#60;</div>
-                  <div class="count__arrow-right">&#62;</div>
-                </div>
-                <div class="count__number">1</div>
-              </div>
-              <div class="toy__price">1000 ₽</div>
-            </div>
-          </div>
+          <div class="cart-list"></div>
           <div class="cart-total">
             <div class="total__title">Итого:</div>
             <input class="total__num" type="text">
@@ -147,6 +89,8 @@
       </div>
     </div>
     <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/cards.js"></script>
+    <script src="js/cart.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
