--- a/catalog.html
+++ b/catalog.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="catalog-slide-btns">
                   <div class="details-btn" data-card="avocado">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="to-cart-btn" data-card="avocado">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -77,7 +77,7 @@
                 </div>
                 <div class="catalog-slide-btns">
                   <div class="details-btn" data-card="shark">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="to-cart-btn" data-card="shark">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -96,7 +96,7 @@
                 </div>
                 <div class="catalog-slide-btns">
                   <div class="details-btn" data-card="lama">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="to-cart-btn" data-card="lama">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="catalog-slide-btns">
                   <div class="details-btn" data-card="cat">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="to-cart-btn" data-card="cat">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -134,7 +134,7 @@
                 </div>
                 <div class="catalog-slide-btns">
                   <div class="details-btn" data-card="corgi">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="to-cart-btn" data-card="corgi">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -153,7 +153,7 @@
                 </div>
                 <div class="catalog-slide-btns">
                   <div class="details-btn" data-card="seal">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="to-cart-btn" data-card="seal">В корзину</div>
                 </div>
               </div>
             </div>
@@ -266,6 +266,7 @@
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/catalog-slider.js"></script>
+    <script src="js/cards.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
