--- a/catalog.html
+++ b/catalog.html
@@ -218,6 +218,14 @@
                 <div class="logo__subtitle">Доставка по всей России</div><img src="img/sun.svg" width="90" height="55" alt="Логотип">
               </div>
               <div class="toy-info">
+                <div class="toy-color">
+                  <div class="color__title">Цвет</div>
+                  <div class="corgi-color corgi-color_1" data-color="серый"></div>
+                  <div class="corgi-color corgi-color_2" data-color="желтый"></div>
+                  <div class="corgi-color corgi-color_3" data-color="коричневый"></div>
+                  <div class="cat-color cat-color_1" data-color="серый"></div>
+                  <div class="cat-color cat-color_2" data-color="желтый"></div>
+                </div>
                 <div class="toy-size">
                   <div class="size__title">Размер</div>
                   <div class="size__num"></div>
