--- a/cart.html
+++ b/cart.html
@@ -61,27 +61,27 @@
           <div class="inputs-block">
             <div class="input-block">
               <label for="name">ФИО</label>
-              <input type="text" name="name" id="name" placeholder="Укажите ваши данные*" required>
+              <input class="field" type="text" name="name" id="name" required>
             </div>
             <div class="input-block">
               <label for="email">Email</label>
-              <input class="email-field" type="email" name="email" id="email" placeholder="Укажите ваши данные*" required>
+              <input class="email-field field" type="email" name="email" id="email" required>
             </div>
             <div class="input-block">
               <label for="phone">Номер телефона </label>
-              <input class="tel-field" type="text" name="phone" id="phone" placeholder="Укажите ваши данные*" required>
+              <input class="tel-field field" type="text" name="phone" id="phone" required>
             </div>
             <div class="input-block">
               <label for="city">Населенный пункт</label>
-              <input type="text" name="city" id="city" placeholder="Укажите ваши данные*" required>
+              <input class="field" type="text" name="city" id="city" required>
             </div>
             <div class="input-block">
               <label for="address">Адрес (улица, дом, квартира)</label>
-              <input type="text" name="address" id="address" placeholder="Укажите ваши данные*" required>
+              <input class="field" type="text" name="address" id="address" required>
             </div>
             <div class="input-block">
               <label for="index">Почтовый индекс</label>
-              <input type="text" name="index" id="index" placeholder="Укажите ваши данные*" maxlength="6" required>
+              <input class="field" type="text" name="index" id="index" maxlength="6" required>
             </div>
             <div class="cart-blocks"></div>
             <input type="submit" id="form-submit" value="Заказать">
