Added social links

--- a/catalog.html
+++ b/catalog.html
@@ -191,10 +191,10 @@
                 </svg></a>
             </div>
             <div class="third-col">
-              <div class="col__title">Мы в соц-сетях</div><a class="col__text" href="#">_aurora_toys_
+              <div class="col__title">Мы в соц-сетях</div><a class="col__text" href="https://instagram.com/_aurora_toys_?igshid=ltgat25sbwk6" target="_blank">_aurora_toys_
                 <svg width="36" height="36">
                   <use xlink:href="img/icons/sprite.svg#instagram-footer"> </use>
-                </svg></a><a class="col__text" href="#">https://vk.com/auroratoys
+                </svg></a><a class="col__text" href="https://vk.com/auroratoys" target="_blank">https://vk.com/auroratoys
                 <svg width="39" height="42">
                   <use xlink:href="img/icons/sprite.svg#vk-footer"> </use>
                 </svg></a>
