Made animation cart

--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="icon" href="#!" type="image/x-icon">
     <link rel="shortcut icon" href="#!" type="image/x-icon">
@@ -41,13 +41,13 @@
             <use xlink:href="img/icons/sprite.svg#back-arrow"></use>
           </svg></a>
         <div class="cart-table">
-          <div class="cart__title">Ваша корзина</div>
+          <div class="cart__title">Ваша корзина пуста</div>
           <div class="cart-list"></div>
           <div class="cart-total">
             <div class="total__title">Итого:</div>
             <input class="total__num" type="text">
           </div>
-          <div class="cart-btn">Оформить заказ</div>
+          <div class="cart-btn">Каталог</div>
         </div>
       </header>
       <div class="overlay">
@@ -98,9 +98,9 @@
         </div>
       </div>
     </div>
-    <script src="js/jquery-3.5.1.js"></script>
-    <script src="js/cards.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/jquery-3.5.1.js" defer></script>
+    <script src="js/cards.js" defer></script>
+    <script src="js/cart.js" defer></script>
+    <script src="js/main.min.js" defer></script>
   </body>
 </html>
