--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="icon" href="#!" type="image/x-icon">
     <link rel="shortcut icon" href="#!" type="image/x-icon">
@@ -271,10 +271,10 @@
         </div>
       </div>
     </div>
-    <script src="js/jquery-3.5.1.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/catalog-slider.js"></script>
-    <script src="js/cards.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/jquery-3.5.1.js" defer></script>
+    <script src="js/owl.carousel.min.js" defer></script>
+    <script src="js/catalog-slider.js" defer></script>
+    <script src="js/cards.js" defer></script>
+    <script src="js/main.min.js" defer></script>
   </body>
 </html>
