--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="tree">
           <picture>
             <source srcset="img/tree@1x.webp, img/tree@2x.webp 2x" type="image/webp">
-            <source srcset="img/tree@1x.png, img/tree@2x.png 2x" type="image/png"><img class="tree-img" src="img/tree@1x.png" srcset="tree@2x.png" width="839" height="1138">
+            <source srcset="img/tree@1x.png, img/tree@2x.png 2x" type="image/png"><img class="tree-img" src="img/tree@1x.png" srcset="img/tree@2x.png" width="839" height="1138">
           </picture>
           <div class="bisquit-content bisquit-content-1">
             <div class="bisquit__title">Это замечательно</div>
@@ -97,7 +97,7 @@
           </div>
           <picture>
             <source srcset="img/biscuit@1x.webp, img/biscuit@2x.webp 2x" type="image/webp">
-            <source srcset="img/biscuit@1x.png, img/biscuit@2x.png 2x" type="image/png"><img class="bisquit-1" src="img/biscuit@1x.png" srcset="biscuit@2x.png" width="274" height="274">
+            <source srcset="img/biscuit@1x.png, img/biscuit@2x.png 2x" type="image/png"><img class="bisquit-1" src="img/biscuit@1x.png" srcset="img/biscuit@2x.png" width="274" height="274">
           </picture>
           <div class="bisquit-content bisquit-content-3">
             <div class="bisquit__title">Это приятно</div>
@@ -105,7 +105,7 @@
           </div>
           <picture>
             <source srcset="img/biscuit@1x.webp, img/biscuit@2x.webp 2x" type="image/webp">
-            <source srcset="img/biscuit@1x.png, img/biscuit@2x.png 2x" type="image/png"><img class="bisquit-2" src="img/biscuit@1x.png" srcset="biscuit@2x.png" width="274" height="274">
+            <source srcset="img/biscuit@1x.png, img/biscuit@2x.png 2x" type="image/png"><img class="bisquit-2" src="img/biscuit@1x.png" srcset="img/biscuit@2x.png" width="274" height="274">
           </picture>
           <div class="bisquit-content bisquit-content-4">
             <div class="bisquit__title">Это удобно</div>
@@ -113,7 +113,7 @@
           </div>
           <picture>
             <source srcset="img/biscuit@1x.webp, img/biscuit@2x.webp 2x" type="image/webp">
-            <source srcset="img/biscuit@1x.png, img/biscuit@2x.png 2x" type="image/png"><img class="bisquit-3" src="img/biscuit@1x.png" srcset="biscuit@2x.png" width="274" height="274">
+            <source srcset="img/biscuit@1x.png, img/biscuit@2x.png 2x" type="image/png"><img class="bisquit-3" src="img/biscuit@1x.png" srcset="img/biscuit@2x.png" width="274" height="274">
           </picture>
         </div>
       </section>
